image align fixing

--- a/styles/style.css
+++ b/styles/style.css
@@ -559,6 +559,7 @@ li img {
     0 1px 0 0 rgba(255, 255, 255, 0.66) inset, 0 4px 16px rgba(0, 0, 0, 0.12);
 }
 .features .box-container .box img {
+  
   margin: 1rem 0;
   height: 15rem;
 }
@@ -570,6 +571,13 @@ li img {
   border: 1px solid var(--bt-color);
   color: var(--color);
   cursor: pointer;
+}
+@media (max-width: 480px) {
+  .features .box-container .box img {
+    width: 100%;
+    margin: 1rem 0;
+    height: 15rem;
+  }
 }
 /* Products */
 .products {
